2A/05_Projet_GL/src/test/deca/context/valid/complet/75_methode_call_this.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

    int x ;

    void intiX() {
        this.x = 1 ;
    }

    void init() {
        this.intiX();
    }
}