2A/05_Projet_GL/src/test/deca/context/invalid/complet/76_select_protected_sous_classe.deca
// Description :
//  selection d'un champ protége dans soous class 
// Resultats :
//    ligne 20 :  le type de A n'est pas un sous-type de B
// Historique : 
//  cree le 16/01/2024


class A {
    protected int x ; 
    A a ;
    A getA() {
        return a ;
    }
}


class B extends A {
    A a ;
    int b = a.getA().x ; 
}